--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   </a-assets>
 
       <a-marker preset="hiro">
-                <a-text value="Visitekaartje" color="red" rotation="-90 0 0"  scale="2 2 2"></a-text>
-                          <a-text value="Visitekaartje" color="red" rotation="-90 10 0"  scale="2 2 2"></a-text>
+                <a-text value="Hallo" color="red" rotation="-90 0 0"  scale="2 2 2"></a-text>
 
             </a-marker>
             <a-marker type='barcode' value='2'>
