--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <body style="margin : 0px; overflow: hidden;">
         <a-scene embedded arjs="trackingMethod: best; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
            <a-assets>
-    <img id="my-image" src="picture.jpeg">
+    <img id="waltuh" src="picture.jpg">
   </a-assets>
 
       <a-marker preset="hiro">
                 <a-text value="Hallo" color="red" rotation="-90 0 0"  scale="2 2 2"></a-text>
-
+                <a-image src="#waltuh" rotation="-90 0 0"  scale="2 2 2"></a-image>
             </a-marker>
             <a-marker type='barcode' value='2'>
                 <a-text value="Opdracht 2!" color="blue" rotation="-90 0 0"  scale="2 2 2"></a-text>
